# cppdummy

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md
cmake/: CPM.cmake  Cache.cmake  CompilerWarnings.cmake  ExternalDependencies.cmake  FetchDependencies.cmake  FindGStreamer.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  SystemLink.cmake  Tests.cmake  Utilities.cmake  VCEnvironment.cmake
include/cppdummy/: pch.h  resource.h
include/cppdummy/defines/: compiler.h  debug.h  export.h  platfrom.h  types.h
src/: CMakeLists.txt  main.cpp
src/intro/: CMakeLists.txt  main.cpp  vec.hpp
src/intro/shaders/: compile.bat  compile.sh  slang.spv
src/streamer/: CMakeLists.txt  main.cpp
